// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageMetadata renders title, description 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "My Page",
        "name": "twitter:title",
      },
      Object {
        "content": "My Page",
        "propery": "og:title",
      },
      Object {
        "content": "My description",
        "name": "description",
      },
      Object {
        "content": "My description",
        "name": "twitter:description",
      },
      Object {
        "content": "My description",
        "propery": "og:description",
      },
    ]
  }
  title="My Page"
/>
`;

exports[`PageMetadata renders title, description, image 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "My Page",
        "name": "twitter:title",
      },
      Object {
        "content": "My Page",
        "propery": "og:title",
      },
      Object {
        "content": "My description",
        "name": "description",
      },
      Object {
        "content": "My description",
        "name": "twitter:description",
      },
      Object {
        "content": "My description",
        "propery": "og:description",
      },
      Object {
        "content": "https://static.bearer.sh/logo.png",
        "name": "twitter:image",
      },
      Object {
        "content": "https://static.bearer.sh/logo.png",
        "propery": "og:image",
      },
    ]
  }
  title="My Page"
/>
`;

exports[`PageMetadata renders when given only a title 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "My Page",
        "name": "twitter:title",
      },
      Object {
        "content": "My Page",
        "propery": "og:title",
      },
    ]
  }
  title="My Page"
/>
`;
